deploy/base/tmeit-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmeit-app
  labels:
    app: tmeit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tmeit-app
  template:
    metadata:
      labels:
        app: tmeit-app
    spec:
      containers:
      - name: uvicorn
        image: tmeit-app:0.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "400m"
            ephemeral-storage: 1Gi # I think this is used for logs? kube-score says that it's important to limit this.
          limits:
            memory: "200Mi"
            cpu: "600m"
            ephemeral-storage: 1Gi
